--- a/NEURODASH/assets/css/main.css
+++ b/NEURODASH/assets/css/main.css
@@ -40,6 +40,7 @@
 @import url('pages/home.css');
 @import url('pages/pasaPalabras.css');
 @import url('pages/rondas.css');
+@import url('pages/unirserSala.css');
 /* ************************* theme ************************* */
 
 @import url('theme/background.css');
