--- a/NEURODASH/assets/css/pages/crear-sala.css
+++ b/NEURODASH/assets/css/pages/crear-sala.css
@@ -169,14 +169,14 @@ body{
     overflow-y: auto;
     height: 100%;
 }
-.tabla{
+/* .tabla{
     overflow-y: auto;
     height: 400px;
 }
 tr{
     width: 100%;
     padding: 10px;
-}
+} */
 /* .tabla-jugadores{
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.7);
@@ -246,12 +246,12 @@ tr{
     border-radius: 50%;
     margin-right: 10px;
     display: flex;
+    flex-direction: column;
 }
 
 .chat-message .username {
     font-weight: bold;
     color: #00bcd4;
-    margin-right: 5px;
 }
 
 .chat-message .message-text {
