--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -81,7 +81,7 @@
             <img class="icon-nav" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Icono de ligas" />
           </button>
           
-          <div class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start mt-3 bg-dark p-2">
+          <div class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start mt-3 bg-dark p-2" style="width: 20rem;">
             <div class="aling-item-centerN m-2">
               <h5 class="txtliga">BRONCE</h5>
               <img class="icon-liga" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
@@ -99,7 +99,7 @@
               </tbody>
             </table>
             <div class="text-end me-3">
-              <div class="btn fondo-btn">+32</div>
+              <div class="btn fondo-btn2">+32</div>
             </div>
           </div>
         </div>
@@ -316,7 +316,7 @@
       </div>
     </div>
 
-    <!-- Modal Notificaciones 3 -->
+    <!-- Modal Notificaciones 2 -->
     <div class="modal fade fondoMdl3 modal-home" id="modalNotificaciones" aria-hidden="true" aria-labelledby="modalNotificaciones"
       tabindex="-1">
       <div class="modal-dialog modal-dialog-centered">
