--- a/NEURODASH/views/creacion_sala/crearsala2.html
+++ b/NEURODASH/views/creacion_sala/crearsala2.html
@@ -62,99 +62,99 @@
                 <div class="container-tabla-usuarios d-flex flex-column text-center">
                     <div class="list-jugadores" id="usuariosTabla">
 
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil"  src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
-                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        <div class="jugador-sala" data-bs-toggle="modal" data-bs-target="#rango">
                             <img class="icono-perfil" src="../../assets/img/iconos/perfil.png" alt="Icono del perfil">
                             <span>nombre</span>
                         </div>
@@ -165,11 +165,11 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal " id="rango" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"  aria-hidden="true">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header modal-header-custom">
-                    <h5 class="modal-title" id="staticBackdropLabel"><img src="../../assets/img/iconos/perfil.png"  class="icono">Nombre</h5>
+                    <h5 class="modal-title"><img src="../../assets/img/iconos/perfil.png"  class="icono">Nombre</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body modal-body-custom">
