--- a/NEURODASH/assets/css/pages/crear-sala.css
+++ b/NEURODASH/assets/css/pages/crear-sala.css
@@ -9,7 +9,7 @@ body{
 .container-crear-sala {
     width: 100%;
     /* padding: 20px; */
-    /* background-color: rgba(0, 0, 0, 0.7); */
+    background-color: rgba(0, 0, 0, 0.396);
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     overflow: hidden;
@@ -142,16 +142,16 @@ body{
     padding: 5px;
 }
 .iniciar-juego {
-    background-color: #b700ae;
-    padding: 8px;
+    background: #d200cf;
     border: none;
-    color: #e0e0e0;
-    cursor: pointer;
-    width: 100%;
-    margin-bottom: 10px;
+    color: #fff;
+    border-radius: 8px;
+    transition: background 0.3s ease;
+
 }
 .iniciar-juego:hover {
-    background-color: #d200cfae;
+    background: #f747f4;
+    box-shadow: 0 4px 8px rgba(255, 64, 129, 0.3);
 }
 
 .send-icon i {
@@ -188,23 +188,25 @@ tr{
     overflow-y: auto;
     height: 100%;
 } */
+
+
 .chat-container {
-    background-color: rgba(0, 0, 0, 0.7);
+    border: 1px solid rgb(0, 0, 0);
+    background-color: rgb(201, 201, 201);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     width: 100%;
-    color: #fff;
     font-family: Arial, sans-serif;
     padding: 10px;
 }
 
 .chat-box {
-    background-color: rgba(111, 111, 111, 0.1);
-    border: none;
+    background-color: rgba(0, 0, 0, 0.468);
+    border: 1px solid rgb(0, 0, 0);
     border-radius: 10px; 
     height: 200px;
     overflow-y: auto;
-    color: #ffffff;
+    color: #3e0049;
     font-size: 14px;
     overflow-x: auto;
     word-break: break-all;
@@ -229,50 +231,61 @@ tr{
 }
 
 .chat-box::-webkit-scrollbar-thumb:hover {
-    border: 2px solid rgb(126, 0, 126);  
-    box-shadow: 0 5px 10px rgb(193, 0, 193); 
+    border: 2px solid rgb(198, 0, 198);  
+    box-shadow: 0 0 10px rgb(193, 0, 193); 
 }
 .chat-message {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-    flex-direction: row-reverse;
+    display: grid;
+    align-items: start;
+    grid-template-columns: 1fr 90px; 
+    grid-template-rows: auto auto;
     gap: 5px;
+}
+
+.chat-message .comentario {
+    grid-column: 1 / 3; 
+    grid-row: 1 / 3; 
+    border-radius: 8px;
+    text-align: right;
+    color: #333;
 }
 
 .chat-message .avatar {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    margin-right: 10px;
-    display: flex;
-    flex-direction: column;
+    grid-column: 3 / 3; 
+    grid-row: 1 / 2;
+    transition: transform 0.3s ease;
+}
+.avatar:hover{
+    transform: rotate(10deg);
 }
 
 .chat-message .username {
-    font-weight: bold;
-    color: #00bcd4;
+    font-weight: lighter;
+    color: #000000;
+    grid-column: 3 / 3; 
+    grid-row: 2 / 3; 
 }
+
 
 .chat-message .message-text {
-    background-color: rgba(231, 231, 231, 0);
-    padding: 8px;
-    border-radius: 5px;
-    color: #ffffff;
-    font-size: 14px;
-    max-width: 200px;
-    word-wrap: break-word;
+    background-color: #00000000;
+    border-radius: 8px;
+    color: #000000;
 }
 
 
-#chat-input {
+.chat-input{
     margin-top: 10px;
-    border: none;
-    border-radius: 20px;
-    background-color: rgba(255, 255, 255, 0.2);
-    color: #ccc;
-    padding: 10px;
+}
+#chat-input { 
+    background-color: rgba(148, 0, 156, 0.775);
+    color: #000000;
+    padding: 5px;
     font-size: 14px;
+    border: 1px solid rgb(0, 0, 0);
 }
 #chat-input:focus {
     outline: none;
@@ -282,10 +295,15 @@ tr{
 .send-icon {
     background-color: #00bcd4;
     padding: 10px;
-    border-radius: 50%;
-    margin-left: 10px;
+    border-radius: 100%;
     cursor: pointer;
     color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    transition: background-color 0.3s ease;
 }
 
 .send-icon:hover {
@@ -329,8 +347,26 @@ tr{
     border: 2px solid rgb(126, 0, 126);  
     box-shadow: 0 5px 10px rgb(193, 0, 193);
 }
+.modal-content {
+    border: 2px solid #00bcd4;
+    animation: glow 1.5s infinite alternate;
+}
 
+@keyframes glow {
+    from {
+        border-color: #006ad4;
+    }
+    to {
+        border-color: #ca03d0;
+    }
+}
+#rango {
+    position: fixed;
+    top: 50%;
+    left: 67%;
+    transform: translate(-50%, -50%);
 
+}
 .jugador-sala{
     /* margin: 10px; */
     width: 95%;
@@ -371,6 +407,7 @@ tr{
     width: 100%;
     height: 300px;
 } */
+ 
 .modal-header-custom {
     background-color: #333;
     color: white;
@@ -384,6 +421,7 @@ tr{
 .modal-body-custom img {
     width: 100px;
     margin-bottom: 10px;
+    
 }
 .container-exp {
     background-color: #ccc;
@@ -414,8 +452,12 @@ tr{
     border-radius: 5px;
 }
 .icono{
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
+    transition: transform 0.3s ease;
+}
+.icono:hover{
+    transform: rotate(10deg);
 }
 .icono-perfil{
     width: 40px;
